        Reviewed by David Kilzer.

http://bugs.webkit.org/show_bug.cgi?id=16787
        array.splice() with 1 element not working

        Test: fast/js/array-splice.html

        * kjs/array_object.cpp:
        (KJS::ArrayProtoFuncSplice::callAsFunction): Implement this Mozilla extension, and fix
        some other edge cases.



Canonical link: https://commits.webkit.org/23292@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@29459 268f45cc-cd09-0410-ab3c-d52691b4dbfc